tests/ui/parser/byte-string-literals.stderr
error: unknown byte escape: `f`
  --> $DIR/byte-string-literals.rs:1:32
   |
LL | static FOO: &'static [u8] = b"\f";
   |                                ^ unknown byte escape
   |
   = help: for more information, visit <https://doc.rust-lang.org/reference/tokens.html#literals>

error: unknown byte escape: `f`
  --> $DIR/byte-string-literals.rs:4:8
   |
LL |     b"\f";
   |        ^ unknown byte escape
   |
   = help: for more information, visit <https://doc.rust-lang.org/reference/tokens.html#literals>

error: invalid character in numeric character escape: `Z`
  --> $DIR/byte-string-literals.rs:5:10
   |
LL |     b"\x0Z";
   |          ^ invalid character in numeric character escape

error[E0766]: unterminated double quote byte string
  --> $DIR/byte-string-literals.rs:6:6
   |
LL |       b"a
   |  ______^
LL | | }
   | |__^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0766`.
